# ecRAT

./: .gitignore  CMakeLists.txt  README.md  test.html
src/client/: main.c
src/components/networking/: networking.h
src/components/shell/: shell.c  shell.h
src/host/: main.c
src/server/: main.c
